# bildschema

./: README.md  pyproject.toml
.github/workflows/: build-deb.yml  build-rpm.yml
.tx/: config
data/: bildschema.desktop
locale/sv/LC_MESSAGES/: bildschema.mo
po/: bildschema.pot  sv.mo  sv.po
po/locale/sv/LC_MESSAGES/: bildschema.mo
src/bildschema/: __main__.py  arasaac.py  export.py  main.py  window.py
src/bildschema/locale/sv/LC_MESSAGES/: bildschema.mo
